# article-art

./: .dockerignore  Dockerfile  pyproject.toml
app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_article_word_count.py  0003_create_superuser.py  0004_article_creator.py  0005_alter_article_content_alter_article_created_at_and_more.py  0006_alter_article_options.py  0007_alter_userprofile_managers_alter_userprofile_email.py
djangocourse/: settings.py  urls.py
locale/es/LC_MESSAGES/: django.po
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
