[tool.poetry]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = ["otavius <developer.otavius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
