[tool.poetry]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = ["otavius <developer.otavius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
